Fix error in generate script

--- a/notebooks/corso-kg-generate.ipynb
+++ b/notebooks/corso-kg-generate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "43a7e7b0-6654-4319-b97f-a830cfafa023",
    "metadata": {},
    "outputs": [
@@ -48,8 +48,10 @@
     "    \n",
     "    # Generate multiple rows for each employee in assignment.csv\n",
     "    num_assignments = random.randint(1, len(competence_ids))\n",
+    "    competence_employee = competence_ids.copy()\n",
     "    for _ in range(num_assignments):\n",
-    "        competence_id = random.choice(competence_ids)\n",
+    "        competence_id = random.choice(competence_employee)\n",
+    "        competence_employee.remove(competence_id)\n",
     "        level = random.randint(1, 5)\n",
     "        interest = random.choice([0,1])\n",
     "        assignments.append([employee_id, competence_id, level, interest])\n",
