--- a/notebooks/corso-kg-rdf.ipynb
+++ b/notebooks/corso-kg-rdf.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "id": "10ac0463-0a60-4a22-97e2-758834e9f69f",
    "metadata": {},
    "outputs": [
@@ -136,10 +136,212 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-18 13:17:35,980 | INFO: Translating YARRRML mapping to [R2]RML\n",
-      "2023-07-18 13:17:35,982 | INFO: RML content is created!\n",
-      "2023-07-18 13:17:35,988 | INFO: Mapping has been syntactically validated.\n",
-      "2023-07-18 13:17:35,989 | INFO: Translation has finished successfully.\n"
+      "2023-07-18 14:29:13,257 | INFO: Translating YARRRML mapping to [R2]RML\n",
+      "2023-07-18 14:29:13,258 | INFO: RML content is created!\n",
+      "2023-07-18 14:29:13,269 | INFO: Mapping has been syntactically validated.\n",
+      "2023-07-18 14:29:13,270 | INFO: Translation has finished successfully.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@prefix kg: <http://www.cefriel.com/corso-kg/data/>.\n",
+      "@prefix ex: <http://www.cefriel.com/corso-kg/schema/>.\n",
+      "@prefix skos: <http://www.w3.org/2004/02/skos/core#>.\n",
+      "@prefix rr: <http://www.w3.org/ns/r2rml#>.\n",
+      "@prefix rml: <http://semweb.mmlab.be/ns/rml#>.\n",
+      "@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>.\n",
+      "@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#>.\n",
+      "@prefix xsd: <http://www.w3.org/2001/XMLSchema#>.\n",
+      "@prefix ql: <http://semweb.mmlab.be/ns/ql#>.\n",
+      "@prefix d2rq: <http://www.wiwiss.fu-berlin.de/suhl/bizer/D2RQ/0.1#>.\n",
+      "@prefix foaf: <http://xmlns.com/foaf/0.1/>.\n",
+      "@prefix schema: <http://schema.org/>.\n",
+      "@prefix formats: <http://www.w3.org/ns/formats/>.\n",
+      "@prefix comp: <http://semweb.mmlab.be/ns/rml-compression#>.\n",
+      "@prefix void: <http://rdfs.org/ns/void#>.\n",
+      "@prefix fnml: <http://semweb.mmlab.be/ns/fnml#>.\n",
+      "@prefix grel: <http://users.ugent.be/~bjdmeest/function/grel.ttl#>.\n",
+      "@base <http://example.com/ns#>.\n",
+      "\n",
+      "\n",
+      "<unit_0> a rr:TriplesMap;\n",
+      "\n",
+      "\trml:logicalSource [\n",
+      "\t\ta rml:LogicalSource;\n",
+      "\t\trml:source \"./../data/employees.csv\";\n",
+      "\t\trml:referenceFormulation ql:CSV\n",
+      "\t];\n",
+      "\trr:subjectMap [\n",
+      "\t\ta rr:SubjectMap;\n",
+      "\t\trr:template \"http://www.cefriel.com/corso-kg/data/unit/{unit}\";\n",
+      "\t];\n",
+      "\trr:predicateObjectMap [\n",
+      "\t\trr:predicateMap [\n",
+      "\t\t\ta rr:PredicateMap;\n",
+      "\t\t\trr:constant rdf:type;\n",
+      "\t\t];\n",
+      "\t\trr:objectMap [\n",
+      "\t\t\ta rr:ObjectMap;\n",
+      "\t\t\trr:constant foaf:Group;\n",
+      "\t\t];\n",
+      "\t];\n",
+      "\trr:predicateObjectMap [\n",
+      "\t\trr:predicateMap [\n",
+      "\t\t\ta rr:PredicateMap;\n",
+      "\t\t\trr:constant foaf:title;\n",
+      "\t\t];\n",
+      "\t\trr:objectMap [\n",
+      "\t\t\ta rr:ObjectMap;\n",
+      "\t\t\trml:reference \"unit\";\n",
+      "\t\t];\n",
+      "\t].\n",
+      "\n",
+      "\n",
+      "<employee_0> a rr:TriplesMap;\n",
+      "\n",
+      "\trml:logicalSource [\n",
+      "\t\ta rml:LogicalSource;\n",
+      "\t\trml:source \"./../data/employees.csv\";\n",
+      "\t\trml:referenceFormulation ql:CSV\n",
+      "\t];\n",
+      "\trr:subjectMap [\n",
+      "\t\ta rr:SubjectMap;\n",
+      "\t\trr:template \"http://www.cefriel.com/corso-kg/data/employee/{id}~iri\";\n",
+      "\t];\n",
+      "\trr:predicateObjectMap [\n",
+      "\t\trr:predicateMap [\n",
+      "\t\t\ta rr:PredicateMap;\n",
+      "\t\t\trr:constant rdf:type;\n",
+      "\t\t];\n",
+      "\t\trr:objectMap [\n",
+      "\t\t\ta rr:ObjectMap;\n",
+      "\t\t\trr:constant foaf:Person;\n",
+      "\t\t];\n",
+      "\t];\n",
+      "\trr:predicateObjectMap [\n",
+      "\t\trr:predicateMap [\n",
+      "\t\t\ta rr:PredicateMap;\n",
+      "\t\t\trr:constant foaf:name;\n",
+      "\t\t];\n",
+      "\t\trr:objectMap [\n",
+      "\t\t\ta rr:ObjectMap;\n",
+      "\t\t\trml:reference \"name\";\n",
+      "\t\t];\n",
+      "\t];\n",
+      "\trr:predicateObjectMap [\n",
+      "\t\trr:predicateMap [\n",
+      "\t\t\ta rr:PredicateMap;\n",
+      "\t\t\trr:constant foaf:surname;\n",
+      "\t\t];\n",
+      "\t\trr:objectMap [\n",
+      "\t\t\ta rr:ObjectMap;\n",
+      "\t\t\trml:reference \"surname\";\n",
+      "\t\t];\n",
+      "\t];\n",
+      "\trr:predicateObjectMap [\n",
+      "\t\trr:predicateMap [\n",
+      "\t\t\ta rr:PredicateMap;\n",
+      "\t\t\trr:constant foaf:member;\n",
+      "\t\t];\n",
+      "\t\trr:objectMap [ \n",
+      "\t\t\ta rr:RefObjectMap;\n",
+      "\t\t\trr:parentTriplesMap <unit_0>;\n",
+      "\t\t\trr:joinCondition [\n",
+      "\t\t\t\trr:child \"unit\";\n",
+      "\t\t\t\trr:parent \"unit\";\n",
+      "\t\t\t]; \n",
+      "\t\t];\n",
+      "\t].\n",
+      "\n",
+      "\n",
+      "<competences_0> a rr:TriplesMap;\n",
+      "\n",
+      "\trml:logicalSource [\n",
+      "\t\ta rml:LogicalSource;\n",
+      "\t\trml:source \"./../data/competences-iri.csv\";\n",
+      "\t\trml:referenceFormulation ql:CSV\n",
+      "\t];\n",
+      "\trr:subjectMap [\n",
+      "\t\ta rr:SubjectMap;\n",
+      "\t\trr:template \"http://data.europa.eu/snb/dcf/{iri}\";\n",
+      "\t];\n",
+      "\trr:predicateObjectMap [\n",
+      "\t\trr:predicateMap [\n",
+      "\t\t\ta rr:PredicateMap;\n",
+      "\t\t\trr:constant rdf:type;\n",
+      "\t\t];\n",
+      "\t\trr:objectMap [\n",
+      "\t\t\ta rr:ObjectMap;\n",
+      "\t\t\trr:constant skos:ConceptScheme;\n",
+      "\t\t];\n",
+      "\t].\n",
+      "\n",
+      "\n",
+      "<assignment_0> a rr:TriplesMap;\n",
+      "\n",
+      "\trml:logicalSource [\n",
+      "\t\ta rml:LogicalSource;\n",
+      "\t\trml:source \"./../data/assignment.csv\";\n",
+      "\t\trml:referenceFormulation ql:CSV\n",
+      "\t];\n",
+      "\trr:subjectMap [\n",
+      "\t\ta rr:SubjectMap;\n",
+      "\t\trr:template \"http://www.cefriel.com/corso-kg/data/assignment/{employee_id}-{competence_id}\";\n",
+      "\t];\n",
+      "\trr:predicateObjectMap [\n",
+      "\t\trr:predicateMap [\n",
+      "\t\t\ta rr:PredicateMap;\n",
+      "\t\t\trr:constant rdf:type;\n",
+      "\t\t];\n",
+      "\t\trr:objectMap [\n",
+      "\t\t\ta rr:ObjectMap;\n",
+      "\t\t\trr:constant ex:EmployeeCompetence;\n",
+      "\t\t];\n",
+      "\t];\n",
+      "\trr:predicateObjectMap [\n",
+      "\t\trr:predicateMap [\n",
+      "\t\t\ta rr:PredicateMap;\n",
+      "\t\t\trr:constant ex:level;\n",
+      "\t\t];\n",
+      "\t\trr:objectMap [\n",
+      "\t\t\ta rr:ObjectMap;\n",
+      "\t\t\trml:reference \"level\";\n",
+      "\t\t\trr:datatype xsd:int\n",
+      "\t\t];\n",
+      "\t];\n",
+      "\trr:predicateObjectMap [\n",
+      "\t\trr:predicateMap [\n",
+      "\t\t\ta rr:PredicateMap;\n",
+      "\t\t\trr:constant ex:employee;\n",
+      "\t\t];\n",
+      "\t\trr:objectMap [ \n",
+      "\t\t\ta rr:RefObjectMap;\n",
+      "\t\t\trr:parentTriplesMap <employee_0>;\n",
+      "\t\t\trr:joinCondition [\n",
+      "\t\t\t\trr:child \"employee_id\";\n",
+      "\t\t\t\trr:parent \"id\";\n",
+      "\t\t\t]; \n",
+      "\t\t];\n",
+      "\t];\n",
+      "\trr:predicateObjectMap [\n",
+      "\t\trr:predicateMap [\n",
+      "\t\t\ta rr:PredicateMap;\n",
+      "\t\t\trr:constant ex:competence;\n",
+      "\t\t];\n",
+      "\t\trr:objectMap [ \n",
+      "\t\t\ta rr:RefObjectMap;\n",
+      "\t\t\trr:parentTriplesMap <competences_0>;\n",
+      "\t\t\trr:joinCondition [\n",
+      "\t\t\t\trr:child \"competence_id\";\n",
+      "\t\t\t\trr:parent \"id\";\n",
+      "\t\t\t]; \n",
+      "\t\t];\n",
+      "\t].\n",
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -153,7 +355,7 @@
     "rml_content = yatter.translate(yaml.load(open(mappings_file)))\n",
     "\n",
     "# Print generated RML triples\n",
-    "# print(rml_content)\n",
+    "print(rml_content)\n",
     "\n",
     "# Save RML to file\n",
     "rml_file = join(folder, \"mappings/corso-kg-rml.ttl\")\n",
@@ -163,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "id": "797e9175-8961-4096-aa53-ce4f309d2762",
    "metadata": {},
    "outputs": [
@@ -171,24 +373,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-18 13:19:29,823 | DEBUG: CONFIGURATION: {'output_file': './../rdf/knowledge-graph.ttl', 'output_format': 'N-TRIPLES', 'na_values': ',nan', 'safe_percent_encoding': '', 'read_parsed_mappings_path': '', 'write_parsed_mappings_path': '', 'mapping_partitioning': 'PARTIAL-AGGREGATIONS', 'logging_file': '', 'oracle_client_lib_dir': '', 'oracle_client_config_dir': '', 'udfs': '', 'output_dir': '', 'only_printable_chars': 'no', 'infer_sql_datatypes': 'no', 'logging_level': 'INFO', 'number_of_processes': '16'}\n",
-      "2023-07-18 13:19:29,824 | DEBUG: DATA SOURCE `Competences`: {'mappings': './../mappings/corso-kg-rml.ttl'}\n",
-      "2023-07-18 13:19:30,550 | DEBUG: Removed self-join from mapping rule `#TM5`.\n",
-      "2023-07-18 13:19:30,556 | INFO: 11 mapping rules retrieved.\n",
-      "2023-07-18 13:19:30,574 | INFO: Mapping partition with 1 groups generated.\n",
-      "2023-07-18 13:19:30,576 | INFO: Maximum number of rules within mapping group: 11.\n",
-      "2023-07-18 13:19:30,577 | INFO: Mappings processed in 0.747 seconds.\n",
-      "2023-07-18 13:19:30,580 | DEBUG: Parallelizing with 16 cores.\n",
-      "2023-07-18 13:19:30,918 | INFO: Number of triples generated in total: 1210.\n"
+      "2023-07-18 14:29:18,481 | DEBUG: CONFIGURATION: {'output_file': './../rdf/knowledge-graph.ttl', 'output_format': 'N-TRIPLES', 'na_values': ',nan', 'safe_percent_encoding': '', 'read_parsed_mappings_path': '', 'write_parsed_mappings_path': '', 'mapping_partitioning': 'PARTIAL-AGGREGATIONS', 'logging_file': '', 'oracle_client_lib_dir': '', 'oracle_client_config_dir': '', 'udfs': '', 'output_dir': '', 'only_printable_chars': 'no', 'infer_sql_datatypes': 'no', 'logging_level': 'INFO', 'number_of_processes': '16'}\n",
+      "2023-07-18 14:29:18,482 | DEBUG: DATA SOURCE `Competences`: {'mappings': './../mappings/corso-kg-rml.ttl'}\n",
+      "2023-07-18 14:29:19,193 | DEBUG: Removed self-join from mapping rule `#TM5`.\n",
+      "2023-07-18 14:29:19,198 | INFO: 11 mapping rules retrieved.\n",
+      "2023-07-18 14:29:19,212 | INFO: Mapping partition with 1 groups generated.\n",
+      "2023-07-18 14:29:19,213 | INFO: Maximum number of rules within mapping group: 11.\n",
+      "2023-07-18 14:29:19,214 | INFO: Mappings processed in 0.726 seconds.\n",
+      "2023-07-18 14:29:19,218 | DEBUG: Parallelizing with 16 cores.\n",
+      "2023-07-18 14:29:19,587 | INFO: Number of triples generated in total: 1210.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N320f838c4a2343fd85936af451c7d0da (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N2dcf81dc35bb4dacbae3ece0f0df57b1 (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "id": "49771016-c967-41d7-b4e4-9950c412631d",
    "metadata": {},
    "outputs": [
