Fix typo in RML mappings

--- a/notebooks/corso-kg-rdf.ipynb
+++ b/notebooks/corso-kg-rdf.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "id": "10ac0463-0a60-4a22-97e2-758834e9f69f",
    "metadata": {},
    "outputs": [
@@ -136,10 +136,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-18 14:29:13,257 | INFO: Translating YARRRML mapping to [R2]RML\n",
-      "2023-07-18 14:29:13,258 | INFO: RML content is created!\n",
-      "2023-07-18 14:29:13,269 | INFO: Mapping has been syntactically validated.\n",
-      "2023-07-18 14:29:13,270 | INFO: Translation has finished successfully.\n"
+      "2023-07-18 14:32:50,435 | INFO: Translating YARRRML mapping to [R2]RML\n",
+      "2023-07-18 14:32:50,436 | INFO: RML content is created!\n",
+      "2023-07-18 14:32:50,446 | INFO: Mapping has been syntactically validated.\n",
+      "2023-07-18 14:32:50,447 | INFO: Translation has finished successfully.\n"
      ]
     },
     {
@@ -208,7 +208,7 @@
       "\t];\n",
       "\trr:subjectMap [\n",
       "\t\ta rr:SubjectMap;\n",
-      "\t\trr:template \"http://www.cefriel.com/corso-kg/data/employee/{id}~iri\";\n",
+      "\t\trr:template \"http://www.cefriel.com/corso-kg/data/employee/{id}\";\n",
       "\t];\n",
       "\trr:predicateObjectMap [\n",
       "\t\trr:predicateMap [\n",
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 75,
    "id": "797e9175-8961-4096-aa53-ce4f309d2762",
    "metadata": {},
    "outputs": [
@@ -373,24 +373,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-18 14:29:18,481 | DEBUG: CONFIGURATION: {'output_file': './../rdf/knowledge-graph.ttl', 'output_format': 'N-TRIPLES', 'na_values': ',nan', 'safe_percent_encoding': '', 'read_parsed_mappings_path': '', 'write_parsed_mappings_path': '', 'mapping_partitioning': 'PARTIAL-AGGREGATIONS', 'logging_file': '', 'oracle_client_lib_dir': '', 'oracle_client_config_dir': '', 'udfs': '', 'output_dir': '', 'only_printable_chars': 'no', 'infer_sql_datatypes': 'no', 'logging_level': 'INFO', 'number_of_processes': '16'}\n",
-      "2023-07-18 14:29:18,482 | DEBUG: DATA SOURCE `Competences`: {'mappings': './../mappings/corso-kg-rml.ttl'}\n",
-      "2023-07-18 14:29:19,193 | DEBUG: Removed self-join from mapping rule `#TM5`.\n",
-      "2023-07-18 14:29:19,198 | INFO: 11 mapping rules retrieved.\n",
-      "2023-07-18 14:29:19,212 | INFO: Mapping partition with 1 groups generated.\n",
-      "2023-07-18 14:29:19,213 | INFO: Maximum number of rules within mapping group: 11.\n",
-      "2023-07-18 14:29:19,214 | INFO: Mappings processed in 0.726 seconds.\n",
-      "2023-07-18 14:29:19,218 | DEBUG: Parallelizing with 16 cores.\n",
-      "2023-07-18 14:29:19,587 | INFO: Number of triples generated in total: 1210.\n"
+      "2023-07-18 15:31:50,649 | DEBUG: CONFIGURATION: {'output_file': 'knowledge-graph', 'na_values': ',nan', 'safe_percent_encoding': '', 'read_parsed_mappings_path': '', 'write_parsed_mappings_path': '', 'mapping_partitioning': 'PARTIAL-AGGREGATIONS', 'logging_file': '', 'oracle_client_lib_dir': '', 'oracle_client_config_dir': '', 'udfs': '', 'output_dir': '', 'output_format': 'N-TRIPLES', 'only_printable_chars': 'no', 'infer_sql_datatypes': 'no', 'logging_level': 'INFO', 'number_of_processes': '16'}\n",
+      "2023-07-18 15:31:50,650 | DEBUG: DATA SOURCE `Competences`: {'mappings': './../mappings/corso-kg-rml.ttl'}\n",
+      "2023-07-18 15:31:51,456 | DEBUG: Removed self-join from mapping rule `#TM5`.\n",
+      "2023-07-18 15:31:51,461 | INFO: 11 mapping rules retrieved.\n",
+      "2023-07-18 15:31:51,478 | INFO: Mapping partition with 1 groups generated.\n",
+      "2023-07-18 15:31:51,480 | INFO: Maximum number of rules within mapping group: 11.\n",
+      "2023-07-18 15:31:51,482 | INFO: Mappings processed in 0.826 seconds.\n",
+      "2023-07-18 15:31:51,486 | DEBUG: Parallelizing with 16 cores.\n",
+      "2023-07-18 15:31:51,838 | INFO: Number of triples generated in total: 1210.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N2dcf81dc35bb4dacbae3ece0f0df57b1 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N9ac989585ce448a19865eda4d1f5c239 (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,11 +398,7 @@
    "source": [
     "import morph_kgc\n",
     "\n",
-    "config = \"\"\"\n",
-    "            [CONFIGURATION]\n",
-    "            output_file: ./../rdf/knowledge-graph.ttl\n",
-    "            output_format: N-TRIPLES\n",
-    "            \n",
+    "config = \"\"\"      \n",
     "            [Competences]\n",
     "            mappings: ./../mappings/corso-kg-rml.ttl\n",
     "         \"\"\"\n",
@@ -410,12 +406,12 @@
     "g_rdflib = morph_kgc.materialize(config)\n",
     "# Save to file\n",
     "output_file = join(folder, \"rdf/knowledge-graph.ttl\")\n",
-    "g_rdflib.serialize(destination=output_file, format='turtle')"
+    "g_rdflib.serialize(destination=output_file, format='ttl', encoding=\"utf-8\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 76,
    "id": "49771016-c967-41d7-b4e4-9950c412631d",
    "metadata": {},
    "outputs": [
@@ -437,8 +433,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "4b93107a-51ee-4b35-89a6-3f587389f45a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Graph identifier=N24f09c7bf0d74c5c8995da9b73afb130 (<class 'rdflib.graph.Graph'>)>"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph = Graph()\n",
+    "graph.parse(output_file, format='ttl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7156958c-1e97-4723-b165-86d12af05fe1",
    "metadata": {},
    "outputs": [],
    "source": []
