RDF: update mappings and namespace parsing

--- a/notebooks/corso-kg-rdf.ipynb
+++ b/notebooks/corso-kg-rdf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
    "id": "04ce129b-0e6b-4e5a-b2f2-e61263c80736",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "id": "567abcbb-890e-48a9-8180-c1424336e2e4",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 82,
    "id": "3fe54e50-8e9b-410e-82c5-3b837f2f29bf",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 96,
    "id": "10ac0463-0a60-4a22-97e2-758834e9f69f",
    "metadata": {},
    "outputs": [
@@ -136,10 +136,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-18 14:32:50,435 | INFO: Translating YARRRML mapping to [R2]RML\n",
-      "2023-07-18 14:32:50,436 | INFO: RML content is created!\n",
-      "2023-07-18 14:32:50,446 | INFO: Mapping has been syntactically validated.\n",
-      "2023-07-18 14:32:50,447 | INFO: Translation has finished successfully.\n"
+      "2023-07-19 08:05:42,734 | INFO: Translating YARRRML mapping to [R2]RML\n",
+      "2023-07-19 08:05:42,736 | INFO: RML content is created!\n",
+      "2023-07-19 08:05:42,748 | INFO: Mapping has been syntactically validated.\n",
+      "2023-07-19 08:05:42,749 | INFO: Translation has finished successfully.\n"
      ]
     },
     {
@@ -223,6 +223,16 @@
       "\trr:predicateObjectMap [\n",
       "\t\trr:predicateMap [\n",
       "\t\t\ta rr:PredicateMap;\n",
+      "\t\t\trr:constant rdf:type;\n",
+      "\t\t];\n",
+      "\t\trr:objectMap [\n",
+      "\t\t\ta rr:ObjectMap;\n",
+      "\t\t\trr:constant ex:Employee;\n",
+      "\t\t];\n",
+      "\t];\n",
+      "\trr:predicateObjectMap [\n",
+      "\t\trr:predicateMap [\n",
+      "\t\t\ta rr:PredicateMap;\n",
       "\t\t\trr:constant foaf:name;\n",
       "\t\t];\n",
       "\t\trr:objectMap [\n",
@@ -274,7 +284,7 @@
       "\t\t];\n",
       "\t\trr:objectMap [\n",
       "\t\t\ta rr:ObjectMap;\n",
-      "\t\t\trr:constant skos:ConceptScheme;\n",
+      "\t\t\trr:constant ex:Competence;\n",
       "\t\t];\n",
       "\t].\n",
       "\n",
@@ -365,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 111,
    "id": "797e9175-8961-4096-aa53-ce4f309d2762",
    "metadata": {},
    "outputs": [
@@ -373,24 +383,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-18 15:31:50,649 | DEBUG: CONFIGURATION: {'output_file': 'knowledge-graph', 'na_values': ',nan', 'safe_percent_encoding': '', 'read_parsed_mappings_path': '', 'write_parsed_mappings_path': '', 'mapping_partitioning': 'PARTIAL-AGGREGATIONS', 'logging_file': '', 'oracle_client_lib_dir': '', 'oracle_client_config_dir': '', 'udfs': '', 'output_dir': '', 'output_format': 'N-TRIPLES', 'only_printable_chars': 'no', 'infer_sql_datatypes': 'no', 'logging_level': 'INFO', 'number_of_processes': '16'}\n",
-      "2023-07-18 15:31:50,650 | DEBUG: DATA SOURCE `Competences`: {'mappings': './../mappings/corso-kg-rml.ttl'}\n",
-      "2023-07-18 15:31:51,456 | DEBUG: Removed self-join from mapping rule `#TM5`.\n",
-      "2023-07-18 15:31:51,461 | INFO: 11 mapping rules retrieved.\n",
-      "2023-07-18 15:31:51,478 | INFO: Mapping partition with 1 groups generated.\n",
-      "2023-07-18 15:31:51,480 | INFO: Maximum number of rules within mapping group: 11.\n",
-      "2023-07-18 15:31:51,482 | INFO: Mappings processed in 0.826 seconds.\n",
-      "2023-07-18 15:31:51,486 | DEBUG: Parallelizing with 16 cores.\n",
-      "2023-07-18 15:31:51,838 | INFO: Number of triples generated in total: 1210.\n"
+      "2023-07-19 09:49:29,216 | DEBUG: CONFIGURATION: {'output_file': 'knowledge-graph', 'na_values': ',nan', 'safe_percent_encoding': '', 'read_parsed_mappings_path': '', 'write_parsed_mappings_path': '', 'mapping_partitioning': 'PARTIAL-AGGREGATIONS', 'logging_file': '', 'oracle_client_lib_dir': '', 'oracle_client_config_dir': '', 'udfs': '', 'output_dir': '', 'output_format': 'N-TRIPLES', 'only_printable_chars': 'no', 'infer_sql_datatypes': 'no', 'logging_level': 'INFO', 'number_of_processes': '16'}\n",
+      "2023-07-19 09:49:29,217 | DEBUG: DATA SOURCE `Competences`: {'mappings': './../mappings/corso-kg-rml.ttl'}\n",
+      "2023-07-19 09:49:30,115 | DEBUG: Removed self-join from mapping rule `#TM6`.\n",
+      "2023-07-19 09:49:30,120 | INFO: 12 mapping rules retrieved.\n",
+      "2023-07-19 09:49:30,136 | INFO: Mapping partition with 1 groups generated.\n",
+      "2023-07-19 09:49:30,138 | INFO: Maximum number of rules within mapping group: 12.\n",
+      "2023-07-19 09:49:30,139 | INFO: Mappings processed in 0.915 seconds.\n",
+      "2023-07-19 09:49:30,142 | DEBUG: Parallelizing with 16 cores.\n",
+      "2023-07-19 09:49:30,572 | INFO: Number of triples generated in total: 1240.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N9ac989585ce448a19865eda4d1f5c239 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=Ne9b8c62afc9c4d1cb9faf1570274906e (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,6 +414,14 @@
     "         \"\"\"\n",
     "# Generate the triples and load them to an RDFLib graph\n",
     "g_rdflib = morph_kgc.materialize(config)\n",
+    "\n",
+    "mapping_file = join(folder, \"mappings/corso-kg-rml.ttl\")\n",
+    "g_mappings = Graph()\n",
+    "g_mappings.parse(mapping_file, format='ttl')\n",
+    "\n",
+    "for ns_prefix, namespace in g_mappings.namespaces():\n",
+    "    g_rdflib.bind(ns_prefix, namespace)\n",
+    "\n",
     "# Save to file\n",
     "output_file = join(folder, \"rdf/knowledge-graph.ttl\")\n",
     "g_rdflib.serialize(destination=output_file, format='ttl', encoding=\"utf-8\")"
@@ -411,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 99,
    "id": "49771016-c967-41d7-b4e4-9950c412631d",
    "metadata": {},
    "outputs": [
@@ -419,7 +437,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of triples generated: 1210\n"
+      "Number of triples generated: 1240\n"
      ]
     }
    ],
@@ -433,30 +451,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 100,
    "id": "4b93107a-51ee-4b35-89a6-3f587389f45a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N24f09c7bf0d74c5c8995da9b73afb130 (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N8ab7f8d6b0d94d3497469ff52093288e (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "graph = Graph()\n",
-    "graph.parse(output_file, format='ttl')"
+    "ontology_file = join(folder, \"rdf/digital-competence-framework-skos-ap-eu.rdf\")\n",
+    "g_rdflib.parse(ontology_file, format='xml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "7156958c-1e97-4723-b165-86d12af05fe1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of triples generated: 9224\n"
+     ]
+    }
+   ],
+   "source": [
+    "q_res = g_rdflib.query('SELECT (COUNT(*) AS ?num_triples) WHERE { ?s ?p ?o }')\n",
+    "\n",
+    "# Print the query results\n",
+    "for row in q_res:\n",
+    "    print(f\"Number of triples generated: {row.num_triples}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "806991f4-3d37-4f7e-8ff6-b9c07b114bac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sparql_query = \"\"\"\n",
+    "    PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>\n",
+    "    PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
+    "    PREFIX skos: <http://www.w3.org/2004/02/skos/core#>\n",
+    "    PREFIX dc: <http://purl.org/dc/elements/1.1/>\n",
+    "    PREFIX kg: <http://www.cefriel.com/corso-kg/data/>\n",
+    "    PREFIX ex: <http://www.cefriel.com/corso-kg/schema/>\n",
+    "    PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
+    "    \n",
+    "    SELECT ?s\n",
+    "    WHERE {\n",
+    "      ?s a ex:Employee .\n",
+    "      }\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "f3d43844-7808-4799-a37e-b03b8b16100a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_12\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_1\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_11\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_27\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_8\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_20\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_28\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_7\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_15\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_19\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_4\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_21\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_30\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_14\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_16\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_5\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_9\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_17\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_3\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_29\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_2\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_23\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_18\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_22\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_24\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_13\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_26\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_25\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_10\n",
+      "http://www.cefriel.com/corso-kg/data/employee/EMPLOYEE_6\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = g_rdflib.query(sparql_query)\n",
+    "# Print the query results\n",
+    "for row in results:\n",
+    "    print(row.s)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7156958c-1e97-4723-b165-86d12af05fe1",
+   "id": "249b5197-61d2-4f5d-98f7-ad37f6078a09",
    "metadata": {},
    "outputs": [],
    "source": []
