--- a/notebooks/corso-kg-langchain.ipynb
+++ b/notebooks/corso-kg-langchain.ipynb
@@ -50,25 +50,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "54f31dd1-f869-476b-96d0-a40690a57d28",
+   "execution_count": null,
+   "id": "67c8816d-1782-49b9-addc-7d4110cb8e2e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: OPENAI_API_KEY=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\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%env OPENAI_API_KEY=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"
+    "from os import getcwd\n",
+    "from os.path import join, dirname\n",
+    "folder = dirname(getcwd())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
+   "id": "54f31dd1-f869-476b-96d0-a40690a57d28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "\n",
+    "credentials = join(folder, \"credentials.json\")\n",
+    "with open(credentials) as f:\n",
+    "    data = json.load(f)\n",
+    "    key = data['OPENAI_API_KEY']\n",
+    "    \n",
+    "os.environ['OPENAI_API_KEY'] = key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "15965ce4-19d1-4233-baec-d49765143851",
    "metadata": {},
    "outputs": [
@@ -76,18 +88,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<http://www.w3.org/2004/02/skos/core#ConceptScheme does not look like a valid URI, trying to serialize this will break.\n",
-      "<http://www.w3.org/2004/02/skos/core#ConceptScheme> ( does not look like a valid URI, trying to serialize this will break.\n",
-      "<http://www.w3.org/2004/02/skos/core#ConceptScheme> (ConceptScheme does not look like a valid URI, trying to serialize this will break.\n",
-      "<http://www.w3.org/2004/02/skos/core#ConceptScheme> (ConceptScheme,  does not look like a valid URI, trying to serialize this will break.\n",
-      "<http://www.w3.org/2004/02/skos/core#ConceptScheme> (ConceptScheme, None does not look like a valid URI, trying to serialize this will break.\n",
-      "<http://www.w3.org/2004/02/skos/core#ConceptScheme> (ConceptScheme, None) does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/Competence does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/Competence> ( does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/Competence> (Competence does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/Competence> (Competence,  does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/Competence> (Competence, None does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/Competence> (Competence, None) does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.cefriel.com/corso-kg/schema/EmployeeCompetence does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.cefriel.com/corso-kg/schema/EmployeeCompetence> ( does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.cefriel.com/corso-kg/schema/EmployeeCompetence> (EmployeeCompetence does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.cefriel.com/corso-kg/schema/EmployeeCompetence> (EmployeeCompetence,  does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.cefriel.com/corso-kg/schema/EmployeeCompetence> (EmployeeCompetence, None does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.cefriel.com/corso-kg/schema/EmployeeCompetence> (EmployeeCompetence, None) does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/Employee does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/Employee> ( does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/Employee> (Employee does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/Employee> (Employee,  does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/Employee> (Employee, None does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/Employee> (Employee, None) does not look like a valid URI, trying to serialize this will break.\n",
       "<http://xmlns.com/foaf/0.1/Person does not look like a valid URI, trying to serialize this will break.\n",
       "<http://xmlns.com/foaf/0.1/Person> ( does not look like a valid URI, trying to serialize this will break.\n",
       "<http://xmlns.com/foaf/0.1/Person> (Person does not look like a valid URI, trying to serialize this will break.\n",
@@ -106,18 +124,18 @@
       "<http://www.cefriel.com/corso-kg/schema/employee> (employee,  does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.cefriel.com/corso-kg/schema/employee> (employee, None does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.cefriel.com/corso-kg/schema/employee> (employee, None) does not look like a valid URI, trying to serialize this will break.\n",
-      "<http://www.cefriel.com/corso-kg/schema/competence does not look like a valid URI, trying to serialize this will break.\n",
-      "<http://www.cefriel.com/corso-kg/schema/competence> ( does not look like a valid URI, trying to serialize this will break.\n",
-      "<http://www.cefriel.com/corso-kg/schema/competence> (competence does not look like a valid URI, trying to serialize this will break.\n",
-      "<http://www.cefriel.com/corso-kg/schema/competence> (competence,  does not look like a valid URI, trying to serialize this will break.\n",
-      "<http://www.cefriel.com/corso-kg/schema/competence> (competence, None does not look like a valid URI, trying to serialize this will break.\n",
-      "<http://www.cefriel.com/corso-kg/schema/competence> (competence, None) does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.cefriel.com/corso-kg/schema/level does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.cefriel.com/corso-kg/schema/level> ( does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.cefriel.com/corso-kg/schema/level> (level does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.cefriel.com/corso-kg/schema/level> (level,  does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.cefriel.com/corso-kg/schema/level> (level, None does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.cefriel.com/corso-kg/schema/level> (level, None) does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/competence does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/competence> ( does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/competence> (competence does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/competence> (competence,  does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/competence> (competence, None does not look like a valid URI, trying to serialize this will break.\n",
+      "<http://www.cefriel.com/corso-kg/schema/competence> (competence, None) does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.w3.org/1999/02/22-rdf-syntax-ns#type does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ( does not look like a valid URI, trying to serialize this will break.\n",
       "<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> (type does not look like a valid URI, trying to serialize this will break.\n",
@@ -156,11 +174,7 @@
     "from langchain.chains import GraphSparqlQAChain\n",
     "from langchain.graphs import RdfGraph\n",
     "\n",
-    "from os import getcwd\n",
-    "from os.path import join, dirname\n",
-    "folder = dirname(getcwd())\n",
     "rdf_file = join(folder, \"rdf/knowledge-graph.ttl\")\n",
-    "\n",
     "graph = RdfGraph(\n",
     "    source_file=rdf_file,\n",
     "    standard=\"rdf\",\n",
@@ -181,9 +195,9 @@
      "text": [
       "In the following, each IRI is followed by the local name and optionally its description in parentheses. \n",
       "The RDF graph supports the following node types:\n",
-      "<http://www.w3.org/2004/02/skos/core#ConceptScheme> (ConceptScheme, None), <http://www.cefriel.com/corso-kg/schema/EmployeeCompetence> (EmployeeCompetence, None), <http://xmlns.com/foaf/0.1/Person> (Person, None), <http://xmlns.com/foaf/0.1/Group> (Group, None)\n",
+      "<http://www.cefriel.com/corso-kg/schema/Competence> (Competence, None), <http://www.cefriel.com/corso-kg/schema/EmployeeCompetence> (EmployeeCompetence, None), <http://www.cefriel.com/corso-kg/schema/Employee> (Employee, None), <http://xmlns.com/foaf/0.1/Person> (Person, None), <http://xmlns.com/foaf/0.1/Group> (Group, None)\n",
       "The RDF graph supports the following relationships:\n",
-      "\n",
+      "<http://www.cefriel.com/corso-kg/schema/employee> (employee, None), <http://www.cefriel.com/corso-kg/schema/level> (level, None), <http://www.cefriel.com/corso-kg/schema/competence> (competence, None), <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> (type, None), <http://xmlns.com/foaf/0.1/title> (title, None), <http://xmlns.com/foaf/0.1/surname> (surname, None), <http://xmlns.com/foaf/0.1/name> (name, None), <http://xmlns.com/foaf/0.1/member> (member, None)\n",
       "\n"
      ]
     }
@@ -195,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "d9497f06-9e63-408b-8715-9e843ec4e8c9",
    "metadata": {},
    "outputs": [],
