Add random seed, update corso-kg-rdf

--- a/notebooks/corso-kg-generate.ipynb
+++ b/notebooks/corso-kg-generate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "43a7e7b0-6654-4319-b97f-a830cfafa023",
    "metadata": {},
    "outputs": [
@@ -18,6 +18,10 @@
    "source": [
     "import csv\n",
     "import random\n",
+    "\n",
+    "# Add seed to generate always the same datasets\n",
+    "# Change seed if needed\n",
+    "random.seed(42)\n",
     "\n",
     "# Define the fields for employees.csv\n",
     "employees_fields = ['id', 'name', 'surname', 'unit']\n",
